# policy-validator

./: CONTRIBUTING.md  LICENSE  README.md  invalid_policy.json  pyproject.toml  requirements.txt  sample_policy.txt  wrong_policy.xyz
src/policy_validator/: __init__.py  main.py
src/policy_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/policy_validator/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/policy_validator/utils/: __init__.py  file_watcher.py
src/policy_validator/validators/: __init__.py  base_validator.py
